fixed click time issue but cant figure out how to un hover photo on mobile but its going to work as is

--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,6 @@ html,
   height: 200px;
   border-radius: 50%;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-  transition: transform 0.3s, box-shadow 0.3s, width 0.3s, height 0.3s;
   margin: 10px;
 }
 
@@ -44,6 +43,8 @@ html,
   width: 250px;
   height: 250px;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
+  transition: transform 0.3s, box-shadow 0.3s;
+  /* Move transition properties here */
 }
 
 .header {
